Updated dependencies (Symfony 3.4, PHPUnit 7, Mockery 1.0)

--- a/Resources/mock_config/simple.yml
+++ b/Resources/mock_config/simple.yml
@@ -4,9 +4,9 @@ parameters:
 
 services:
     test.average:
-        class: %test.average.class%
+        class: '%test.average.class%'
         tags:
             - { name: test.faketag }
         arguments: ['@test.loader.factory', '@test.dumper.factory']
     test.empty:
-        class: %test.empty.class%
+        class: '%test.empty.class%'
