--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
         }
     ],
     "require": {
-        "php":  ">=5.3.3",
-        "symfony/console": "~2.3",
-        "symfony/framework-bundle": "~2.3"
+        "php":  "^5.5.9|>=7.0.8",
+        "symfony/console": "^3.4",
+        "symfony/yaml": "^3.4",
+        "symfony/framework-bundle": "^3.4"
     },
     "require-dev": {
-        "mockery/mockery": "~0.8",
-        "phpunit/phpunit": "~3.7"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-0": {
